made some more changes to the styling on the events component to fix the display on smaller screens

--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -2,7 +2,7 @@
 div.event-card {
     padding: 20px 25px;
     border: solid .5px #bbb;
-    margin: 25px 0px;
+    margin: 25px 15%;
     background-color: #fff;
 }
 
@@ -69,7 +69,7 @@ div.event-card div {
     margin-left: 0;
     }
 div.event-card {
-    margin: 0;
+    margin: 20px 0;
     padding: 20px 10%;
     }
 
